# lzma-sdk-sys

./: Cargo.toml  README.md  build.rs  wrapper.h
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: lzma_benchmark.rs
precompiled-asm/: readme.md
src/: bindings.rs  lib.rs
